DEBUG: github/workflows/tests: Run only one test
Signed-off-by: Din Music <din.music@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -327,7 +327,7 @@ jobs:
           export PATH="/home/runner/go/bin:$PATH:/snap/microovn/current/commands"
 
           # Run the tests for the selected backend
-          sudo --preserve-env="${SUDO_PRESERVE_ENV}" ./main.sh "group:${GROUP}"
+          sudo --preserve-env="${SUDO_PRESERVE_ENV}" ./main.sh clustering_live_migration
 
       - name: "Run system tests (${{ matrix.group }}, dir)"
         if: matrix.backends == 'all' || matrix.backends == 'dir'
